--- a/projetos/pw2-Treino/src/main/resources/application.properties
+++ b/projetos/pw2-Treino/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=pw2-etec-car
+spring.application.name=pw2-Treino
 
 # DATASOURCE
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PW2_ETEC_CAR;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=PROJETOS;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=*123456HAS*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
