--- a/projetos/pw-study/pom.xml
+++ b/projetos/pw-study/pom.xml
@@ -39,6 +39,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
@@ -59,8 +60,20 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.2.9</version>
 		</dependency>
-	</dependencies>
 
+
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-common</artifactId>
+		<version>2.6.0</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.6.0</version>
+	</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
